# NativeCalculator

./: settings.gradle.kts
NativeCalculatorLibrary/: build.gradle.kts
NativeCalculatorLibrary/src/androidTest/java/com/example/nativecalculatorlibrary/: ExampleInstrumentedTest.java
NativeCalculatorLibrary/src/main/cpp/: CMakeLists.txt  native-lib.cpp
NativeCalculatorLibrary/src/main/java/com/example/nativecalculatorlibrary/: CalculatorBridge.java  Operation.java
NativeCalculatorLibrary/src/test/java/com/example/nativecalculatorlibrary/: ExampleUnitTest.java
app/: build.gradle.kts
app/libs/: NativeCalculatorLibrary-release.aar
app/src/androidTest/java/com/example/nativecalculatorapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/nativecalculatorapp/: MainActivity.java  Operation.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/nativecalculatorapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
